--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-dir": "^0.1.17"
+  },
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
