--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "^14.18.0 || >=16.0.0"
   },
   "dependencies": {
+    "html-react-parser": "^3.0.6",
     "node-dir": "^0.1.17"
   },
   "devDependencies": {
