--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/Lasse-Tom-Lang/ide#readme",
   "dependencies": {
+    "@prisma/client": "^4.10.1",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.6"
+    "@types/express-session": "^1.17.6",
+    "prisma": "^4.10.1"
   }
 }
