--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "crypto": "^1.0.1",
+    "directory-tree": "^3.5.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
   },
